testsuite/poke.pkl/struct-method-diag-3.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    defun foo = (int x) int: { return x + 10; }
    int i : i !=
      foo (i); /* { dg-error "method" } */
  };
